--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "second iteration of deep-note",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "nodemon -r esm server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/devonbahary/deep-note-v2#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
