--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "second iteration of deep-note",
   "main": "index.js",
   "scripts": {
-    "watch": "nodemon -r esm server.js"
+    "watch:client": "webpack serve",
+    "watch:server": "nodemon -r esm server.js"
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,23 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "webpack": "^5.10.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "nodemon": "^2.0.6",
+    "npm": "^6.14.9",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
