--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "second iteration of deep-note",
   "main": "index.js",
   "scripts": {
+    "build:client": "webpack --config webpack/webpack.prod.js",
     "watch": "concurrently \"npm run watch:client\" \"npm run watch:server\"",
-    "watch:client": "webpack serve",
+    "watch:client": "webpack serve --config webpack/webpack.dev.js",
     "watch:server": "nodemon -r esm server.js"
   },
   "repository": {
@@ -26,7 +27,8 @@
     "mongodb": "^3.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "webpack": "^5.10.1"
+    "webpack": "^5.10.1",
+    "webpack-merge": "^5.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
