--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-loader": "^8.2.2",
     "concurrently": "^5.3.0",
     "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.0",
     "nodemon": "^2.0.6",
     "npm": "^6.14.9",
     "sass": "^1.30.0",
